{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Tank1",
            "id": "963e83f1-f8ae-45f8-96a1-bc09a0dd5710",
            "actions": [
                {
                    "name": "Rotate",
                    "type": "PassThrough",
                    "id": "10e22539-95be-42a2-af60-58c0be38fe38",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Forward",
                    "type": "PassThrough",
                    "id": "595abf18-5141-4a79-af26-2626f5629d18",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shoot",
                    "type": "PassThrough",
                    "id": "868981f2-a284-48f1-94da-5d1771baea6e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Teleport",
                    "type": "Button",
                    "id": "b387bbc6-861b-47e9-a978-63212dee43fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "Rotate",
                    "id": "05a023aa-90da-48ca-a904-86c25e6adb47",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "4a77a125-1596-4cd2-8933-6cc568f8b230",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "10ccae43-a315-4ad6-94da-5736cc421901",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5019aa98-06af-4c06-9630-b02c1a127ee0",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55d18830-f104-46f8-b514-099b591ef8df",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c5a238a-8a00-459b-bf43-d37bbb70d8b5",
                    "path": "<Keyboard>/k",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Teleport",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Tank2",
            "id": "7b0f47ce-9c2f-49ca-9704-e3a5a3d2d43e",
            "actions": [
                {
                    "name": "Rotate",
                    "type": "PassThrough",
                    "id": "521f9232-bd1a-4fd4-aed2-b17bf021729f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Forward",
                    "type": "PassThrough",
                    "id": "c771ad22-5d3f-4fae-864c-1f9a753efff2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shoot",
                    "type": "PassThrough",
                    "id": "18974c1a-0314-4f72-a2bf-5935f4dc5734",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Teleport",
                    "type": "Button",
                    "id": "a7c12cf2-39c7-427a-a478-a4e859e65245",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "Rotate",
                    "id": "8b52aef7-2a95-4d08-a1d4-7a7a4af277c1",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "cd8d4a52-9e6d-4692-972b-100bf9e64697",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1b0960a9-cead-4605-9e51-640f18f92221",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c3282519-308d-4371-8980-29d441d1c835",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59e479d1-dcb1-407c-9993-094842a6715e",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "694844e5-9667-44ba-bc9b-32d4e5baee43",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Teleport",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "WASD",
            "bindingGroup": "WASD",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}